# diplom

./: .env copy  .env.sample  .gitignore  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
authors/: models.py  serializers.py  urls.py  views.py
authors/migrations/: 0001_initial.py
books/: models.py  serializers.py  tests.py  urls.py  views.py
books/migrations/: 0001_initial.py  0002_lending.py
config/: settings.py  urls.py
users/: views.py
users/migrations/: 0001_initial.py
